--- a/Data-Visualization-Python.ipynb
+++ b/Data-Visualization-Python.ipynb
@@ -1,16 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Analysis of GDP Data Stored as a CSV File"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a year to lookup GDP: 1965\n",
-      "GDP in 1965  was 17.2  billion dollars which is -20.0 % different than 1970.\n"
+      "Enter a year to lookup GDP: 1999\n",
+      "GDP in 1999  was 93.9  billion dollars which is 336.74418604651163 % different than 1970.\n"
      ]
     },
     {
@@ -25,7 +32,6 @@
     }
    ],
    "source": [
-    "#Data Analysis of GDP Data Stored as a CSV File\n",
     "\n",
     "#Create an empty dictionary that has key the year and value the GDP for that year\n",
     "#Create two empty lists to store year and GDP data\n",
@@ -207,11 +213,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open Data and Interactive Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Create a Pie chart using the values to represent the number of motor vehicle hospitalization by the health region\n",
+    "\n",
+    "import pygal \n",
+    "import pandas as pd\n",
+    "data = pd.read_table(\"hospitalization.csv\", sep= \",\")\n",
+    "\n",
+    "region=data['Region'].values[:].tolist()\n",
+    "total=data['Total'].values[:].tolist()\n",
+    "pie_chart = pygal.Pie()\n",
+    "pie_chart.title = 'Motor Vehicle Hospitalizations by Region'\n",
+    "for i in range(len(region)):\n",
+    "    pie_chart.add(region[i], total[i])\n",
+    "pie_chart.render_to_file('Pie_Chart.svg')\n",
+    "\n",
+    "#output file uploaded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a 2x2 grid to represent the data as shown in the following figure:\n",
+    "#The top-left section contains population growth in %, top-right section contains Population in thousand, \n",
+    "#left-bottom section shows urban population growth in % and right-bottom section displays urban population in thousand.\n",
+    "\n",
+    "import pandas as pd\n",
+    "from bokeh.layouts import gridplot\n",
+    "from bokeh.plotting import output_file, show, figure\n",
+    "from bokeh.models import ColumnDataSource\n",
+    "\n",
+    "data1 = pd.read_table(\"population_growth.csv\", sep= \",\")\n",
+    "Year=data1['Year']\n",
+    "popPres= data1['Population_growth']\n",
+    "pop= data1['Population']\n",
+    "urbanPres= data1['Urban_growth']\n",
+    "urban= data1['Urban_population']\n",
+    "\n",
+    "source = ColumnDataSource(data=dict(x=Year, y0=popPres, y1=pop, y2=urbanPres, y3=urban))\n",
+    "TOOLS = \"box_select,lasso_select,help\"\n",
+    "s1 = figure(tools=TOOLS, width=300, plot_height=300, title=\"Population growth in %\")\n",
+    "s1.circle('x', 'y0', source=source)\n",
+    "s2 = figure(tools=TOOLS, width=300, height=300, title=\"Population(in thousand)\")\n",
+    "s2.circle('x', 'y1', source=source)\n",
+    "s3 = figure(tools=TOOLS, width=300, height=300, title=\"Urban Population growth in %\")\n",
+    "s3.circle('x', 'y2', source=source)\n",
+    "s4 = figure(tools=TOOLS, width=300, height=300, title=\"Urban Population(in thousand)\")\n",
+    "s4.circle('x', 'y3', source=source)\n",
+    "p = gridplot([[s1, s2], [s3, s4]], toolbar_location=None)\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Use Bokeh brushing technique so that a selection on one plot causes a selection to update on other plots.\n",
+    "\n",
+    "from bokeh.io import output_file, show\n",
+    "from bokeh.models import ColumnDataSource, GMapOptions\n",
+    "from bokeh.plotting import gmap\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('bc_adult_education.csv')\n",
+    "data_lat=data['Latitude'].values[:].tolist()\n",
+    "data_lng=data['Longitude'].values[:].tolist()\n",
+    "\n",
+    "output_file(\"gmap.html\") \n",
+    "map_options = GMapOptions(lat=50.748165, lng=-122.595148, map_type=\"roadmap\", zoom=5)\n",
+    "p = gmap(\"API_KEY\", map_options, title=\"Vancouver\")\n",
+    "source = ColumnDataSource(\n",
+    "    data=dict(lat=data_lat,\n",
+    "              lon=data_lng)\n",
+    ")\n",
+    "p.circle(x=\"lon\", y=\"lat\", size=15, fill_color=\"blue\", fill_alpha=0.5, source=source)\n",
+    "show(p)"
+   ]
   }
  ],
  "metadata": {
